--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
+    <string name="search">Поиск</string>
+    <string name="library">Медиатека</string>
+    <string name="settings">Настройки</string>
+
+    <string name="themeSwitch">Темная тема</string>
+    <string name="shareApp">Поделиться приложением</string>
+    <string name="support">Написать в поддержку</string>
+    <string name="userAccept">Пользовательское соглашение</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 </resources>
